--- a/test/sqlrelay.conf.d/sqlite.conf.in
+++ b/test/sqlrelay.conf.d/sqlite.conf.in
@@ -6,7 +6,7 @@
 			<user user="test" password="test"/>
 		</users>
 		<connections>
-			<connection string="db=@abs_top_builddir@/sqlrelay.conf.d/sqlite/sqlite.db;"/>
+			<connection string="db=@abs_top_builddir@/test/sqlrelay.conf.d/sqlite/sqlite.db;"/>
 		</connections>
 	</instance>
 
