--- a/configure.in
+++ b/configure.in
@@ -607,25 +607,25 @@ echo
 echo "***** Platform ***************"
 FW_CHECK_UNAME
 FW_CHECK_MULTIARCH
+FW_CHECK_LIBDIR
+FW_CHECK_OVERRIDE_MULTIARCH
 FW_CHECK_X64
 FW_CHECK_MICROSOFT
 FW_CHECK_MINIX
 FW_CHECK_HAIKU
 FW_CHECK_SYLLABLE
-FW_CHECK_SCO_OSR6
-FW_CHECK_SCO_UW
+FW_CHECK_SCO
 FW_CHECK_OSX
 FW_CHECK_IRIX
 FW_CHECK_SO_EXT
+AC_DEFINE_UNQUOTED(SQLRELAY_MODULESUFFIX,"$MODULESUFFIX",Suffix for loadable modules)
 FW_CHECK_PLUGIN_DEPENDENCIES
-FW_CHECK_LIBDIR
-
 FW_CHECK_LD_RPATH
-
 FW_CHECK_PIPE
 FW_CHECK_FPIC
 FW_CHECK_WERROR
 FW_CHECK_WALL
+FW_CHECK_WALL_WUNUSED
 FW_CHECK_WNOOVERLOADEDVIRTUAL
 FW_CHECK_WNOMISMATCHEDTAGS
 FW_CHECK_WNOUNKNOWNPRAGMAS
