--- a/config.mk.in
+++ b/config.mk.in
@@ -135,7 +135,7 @@ MICROSOFT = @MICROSOFT@
 
 # rudiments library
 RUDIMENTSPATH = @RUDIMENTSPATH@
-RUDIMENTSINCLUDES = @RUDIMENTSINCLUDES@
+RUDIMENTSINCLUDES = @RUDIMENTSCFLAGS@
 RUDIMENTSLIBS = @RUDIMENTSLIBS@
 RUDIMENTSLIBSPATH = @RUDIMENTSLIBSPATH@ 
 
