--- a/config.mk.in
+++ b/config.mk.in
@@ -134,7 +134,7 @@ MICROSOFT = @MICROSOFT@
 
 
 # rudiments library
-RUDIMENTSPATH = @RUDIMENTSPATH@
+RUDIMENTSPREFIX = @RUDIMENTSPREFIX@
 RUDIMENTSINCLUDES = @RUDIMENTSCFLAGS@
 RUDIMENTSLIBS = @RUDIMENTSLIBS@
 RUDIMENTSLIBSPATH = @RUDIMENTSLIBSPATH@ 
