--- a/configure.in
+++ b/configure.in
@@ -56,8 +56,8 @@ AC_ARG_ENABLE(server-rpath,
 	SERVERUSERPATH="")
 AC_ARG_WITH(rudiments-prefix,
 	[  --with-rudiments-prefix       Location of rudiments],
-	RUDIMENTSPATH="$withval",
-	RUDIMENTSPATH="")
+	RUDIMENTSPREFIX="$withval",
+	RUDIMENTSPREFIX="")
 AC_ARG_WITH(libgdbm-prefix,
 	[  --with-libgdbm-prefix         Location of libgdbm],
 	GDBMPATH="$withval",
@@ -512,8 +512,8 @@ AC_DEFINE_UNQUOTED(DEFAULT_RUNASGROUP,["$DEFAULT_RUNASGROUP"],default group to r
 
 dnl Rewrite supplied paths.
 PWD=`pwd`
-if ( test -n "$RUDIMENTSPATH"  -a "`echo $RUDIMENTSPATH | cut -c-3`" = "../" ); then
-	RUDIMENTSPATH="$PWD/$RUDIMENTSPATH"
+if ( test -n "$RUDIMENTSPREFIX"  -a "`echo $RUDIMENTSPREFIX | cut -c-3`" = "../" ); then
+	RUDIMENTSPREFIX="$PWD/$RUDIMENTSPREFIX"
 fi
 if ( test -n "$GDBMPATH" -a "`echo $GDBMPATH | cut -c-3`" = "../" ); then
 	GDBMPATH="$PWD/$GDBMPATH"
