updated to use FW_CHECK_VERSION

--- a/configure.in
+++ b/configure.in
@@ -669,6 +669,7 @@ dnl Checks for Rudiments.
 echo
 echo "***** Rudiments **************"
 FW_CHECK_RUDIMENTS
+FW_CHECK_VERSION([Rudiments],[$RUDIMENTSVERSION],[2.0.0])
 echo "******************************"
 
 
