--- a/configure.in
+++ b/configure.in
@@ -594,11 +594,7 @@ echo "***** Libtool ****************"
 AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
 FW_CHECK_USE_SYSTEM_LIBTOOL
-
-dnl have to set ar here because libtool (currently) fails
-dnl to use the correct one when cross-compiling
-AC_CHECK_PROG(AR,$host_alias-ar,$host_alias-ar,ar)
-AC_SUBST(AR)
+FW_FIX_AR
 echo "******************************"
 
 
