--- a/test/Makefile
+++ b/test/Makefile
@@ -41,7 +41,26 @@ clean:
 	cd ruby $(AND) $(MAKE) clean
 	cd stress $(AND) $(MAKE) clean
 	cd tcl $(AND) $(MAKE) clean
-	$(RM) sqlr-*.*.bt sybinit.err log/*.log sqlrelay.conf.d/sqlite/sqlite.db
+	$(RM) sqlr-*.*.bt sybinit.err log/*.log sqlrelay.conf.d/sqlite/sqlite.db temp1 temp2 temp3
 
 tests: all
 	$(SCRIPTINT) $(THISDIR)testall$(SCRIPTEXT)
+
+install:
+	$(MKINSTALLDIRS) $(sysconfdir)/sqlrelay.conf.d
+	$(MKINSTALLDIRS) $(sysconfdir)/sqlrelay.conf.d/freetds/etc
+	$(MKINSTALLDIRS) $(sysconfdir)/sqlrelay.conf.d/pwdenc
+	$(MKINSTALLDIRS) $(sysconfdir)/sqlrelay.conf.d/sqlite
+	$(MKINSTALLDIRS) $(sysconfdir)/sqlrelay.conf.d/tls
+	# FIXME: implement for windows
+	for file in `ls sqlrelay.conf.d/*.in`; \
+	do \
+		$(REPLACE) @HOSTNAME@ testdb $$file > temp1; \
+		$(REPLACE) @SHORTHOSTNAME@ testdb temp1 > temp2; \
+		$(REPLACE) @abs_top_builddir@/test $(sysconfdir) temp2 > temp3; \
+		$(CP) temp3 $(sysconfdir)/sqlrelay.conf.d/`basename $$file .in`; \
+		$(RM) temp1 temp2 temp3; \
+	done
+	$(CP) sqlrelay.conf.d/freetds/etc/* $(sysconfdir)/sqlrelay.conf.d/freetds/etc
+	$(CP) sqlrelay.conf.d/pwdenc/* $(sysconfdir)/sqlrelay.conf.d/pwdenc
+	$(CP) sqlrelay.conf.d/tls/* $(sysconfdir)/sqlrelay.conf.d/tls
