--- a/test/sqlrelay.conf.d/firebird.conf.in
+++ b/test/sqlrelay.conf.d/firebird.conf.in
@@ -10,4 +10,22 @@
 		</connections>
 	</instance>
 
+	<instance id="firebird3test" port="9000" socket="/tmp/test.socket" dbase="firebird">
+		<users>
+			<user user="test" password="test"/>
+		</users>
+		<connections>
+			<connection string="user=testuser;password=testpassword;db=firebird3:/u02/@HOSTNAME@.gdb;dialect=3"/>
+		</connections>
+	</instance>
+
+	<instance id="firebird2test" port="9000" socket="/tmp/test.socket" dbase="firebird">
+		<users>
+			<user user="test" password="test"/>
+		</users>
+		<connections>
+			<connection string="user=testuser;password=testpassword;db=firebird2:/u02/@HOSTNAME@.gdb;dialect=3"/>
+		</connections>
+	</instance>
+
 </instances>
