--- a/test/sqlrelay.conf.d/oracle.conf.in
+++ b/test/sqlrelay.conf.d/oracle.conf.in
@@ -10,4 +10,31 @@
 		</connections>
 	</instance>
 
+	<instance id="oracle12ctest" port="9000" socket="/tmp/test.socket" dbase="oracle">
+		<users>
+			<user user="test" password="test"/>
+		</users>
+		<connections>
+                        <connection string="oracle_sid=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = oracle12c)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora1)));user=@HOSTNAME@;password=testpassword"/>
+		</connections>
+	</instance>
+
+	<instance id="oracle11gtest" port="9000" socket="/tmp/test.socket" dbase="oracle">
+		<users>
+			<user user="test" password="test"/>
+		</users>
+		<connections>
+                        <connection string="oracle_sid=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = oracle11g)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora1)));user=@HOSTNAME@;password=testpassword"/>
+		</connections>
+	</instance>
+
+	<instance id="oracle10gtest" port="9000" socket="/tmp/test.socket" dbase="oracle">
+		<users>
+			<user user="test" password="test"/>
+		</users>
+		<connections>
+                        <connection string="oracle_sid=(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = oracle10g)(PORT = 1521)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = ora1)));user=@HOSTNAME@;password=testpassword"/>
+		</connections>
+	</instance>
+
 </instances>
