--- a/test/sqlrelay.conf.d/postgresql.conf.in
+++ b/test/sqlrelay.conf.d/postgresql.conf.in
@@ -10,4 +10,13 @@
 		</connections>
 	</instance>
 
+	<instance id="postgresql12test" port="9000" socket="/tmp/test.socket" dbase="postgresql">
+		<users>
+			<user user="test" password="test"/>
+		</users>
+		<connections>
+			<connection string="host=postgresql12;user=testuser;password=testpassword;db=@HOSTNAME@;lastinsertidfunction=testfunc();typemangling=lookup;tablemangling=lookup"/>
+		</connections>
+	</instance>
+
 </instances>
