updated to use new acfirstworks.m4 tests/defines for older mac os x

--- a/config.mk.in
+++ b/config.mk.in
@@ -72,6 +72,7 @@ WNOMISMATCHEDTAGS = @WNOMISMATCHEDTAGS@
 INC = -I
 OBJ = lo
 DIRCPPFLAG = -DBINDIR=\"$(bindir)/\" -DLOCALSTATEDIR=\"$(localstatedir)/\" -DSYSCONFDIR=\"$(sysconfdir)/\" -DLIBEXECDIR=\"$(libexecdir)/\"
+MACOSXDEPLOYMENTTARGET = @MACOSXDEPLOYMENTTARGET@
 
 
 # linker flags
