--- a/src/api/nodejs/Makefile
+++ b/src/api/nodejs/Makefile
@@ -13,7 +13,7 @@ clean:
 	$(RM) temp1.gyp temp2.gyp
 
 build/Release/sqlrelay.node: binding.gyp sqlrelay.cpp package.json
-	$(NODEGYP) $(NODEGYPPYTHON) -v configure build
+	$(MACOSXDEPLOYMENTTARGET) $(NODEGYP) $(NODEGYPPYTHON) -v configure build
 
 binding.gyp: binding_in.gyp
 	$(REPLACE) @NODEJSINCLUDEDIRS@ "$(NODEJSINCLUDEDIRS)" binding_in.gyp > temp1.gyp
