--- a/config.mk.in
+++ b/config.mk.in
@@ -75,7 +75,7 @@ DIRCPPFLAG = -DBINDIR=\"$(bindir)/\" -DLOCALSTATEDIR=\"$(localstatedir)/\" -DSYS
 
 
 # linker flags
-LTLINK = $(LIBTOOL) --mode=link
+LTLINK = @MACOSXDEPLOYMENTTARGET@ $(LIBTOOL) --mode=link
 LINK = @CXX@
 CCLINK = @CC@
 AR = @AR@
