added typedef for _Bool for platforms that need it

--- a/config.mk.in
+++ b/config.mk.in
@@ -76,7 +76,7 @@ MACOSXDEPLOYMENTTARGET = @MACOSXDEPLOYMENTTARGET@
 
 
 # linker flags
-LTLINK = @MACOSXDEPLOYMENTTARGET@ $(LIBTOOL) --mode=link
+LTLINK = $(MACOSXDEPLOYMENTTARGET) $(LIBTOOL) --mode=link
 LINK = @CXX@
 CCLINK = @CC@
 AR = @AR@
