--- a/doc/Makefile
+++ b/doc/Makefile
@@ -33,6 +33,12 @@ install:
 	$(MKINSTALLDIRS) $(docdir)/api/ruby/doc/images
 	$(MKINSTALLDIRS) $(docdir)/api/ruby/doc/js
 	$(MKINSTALLDIRS) $(docdir)/api/java
+	$(MKINSTALLDIRS) $(docdir)/api/java/com/firstworks/sqlrelay
+	$(MKINSTALLDIRS) $(docdir)/api/java/jquery/external
+	$(MKINSTALLDIRS) $(docdir)/api/java/jquery/images
+	$(MKINSTALLDIRS) $(docdir)/api/java/jszip/dist
+	$(MKINSTALLDIRS) $(docdir)/api/java/jszip-utils/dist
+	$(MKINSTALLDIRS) $(docdir)/api/java/resources
 	$(MKINSTALLDIRS) $(docdir)/api/tcl
 	$(MKINSTALLDIRS) $(docdir)/api/erlang/html
 	$(MKINSTALLDIRS) $(docdir)/api/nodejs/html
@@ -53,6 +59,8 @@ install:
 	$(CHMOD) 644 $(docdir)/api/ado.net/html/*.css
 	$(CP) api/ado.net/html/*.png $(docdir)/api/ado.net/html
 	$(CHMOD) 644 $(docdir)/api/ado.net/html/*.png
+	$(CP) api/ado.net/html/*.svg $(docdir)/api/ado.net/html
+	$(CHMOD) 644 $(docdir)/api/ado.net/html/*.svg
 	$(CP) api/ado.net/html/*.js $(docdir)/api/ado.net/html
 	$(CHMOD) 644 $(docdir)/api/ado.net/html/*.js
 	$(CP) api/c/html/*.html $(docdir)/api/c/html
@@ -61,6 +69,8 @@ install:
 	$(CHMOD) 644 $(docdir)/api/c/html/*.css
 	$(CP) api/c/html/*.png $(docdir)/api/c/html
 	$(CHMOD) 644 $(docdir)/api/c/html/*.png
+	$(CP) api/c/html/*.svg $(docdir)/api/c/html
+	$(CHMOD) 644 $(docdir)/api/c/html/*.svg
 	$(CP) api/c/html/*.js $(docdir)/api/c/html
 	$(CHMOD) 644 $(docdir)/api/c/html/*.js
 	$(CP) api/c++/html/*.html $(docdir)/api/c++/html
@@ -69,6 +79,8 @@ install:
 	$(CHMOD) 644 $(docdir)/api/c++/html/*.css
 	$(CP) api/c++/html/*.png $(docdir)/api/c++/html
 	$(CHMOD) 644 $(docdir)/api/c++/html/*.png
+	$(CP) api/c++/html/*.svg $(docdir)/api/c++/html
+	$(CHMOD) 644 $(docdir)/api/c++/html/*.svg
 	$(CP) api/c++/html/*.js $(docdir)/api/c++/html
 	$(CHMOD) 644 $(docdir)/api/c++/html/*.js
 	$(CP) api/cs/html/*.html $(docdir)/api/cs/html
@@ -77,6 +89,8 @@ install:
 	$(CHMOD) 644 $(docdir)/api/cs/html/*.css
 	$(CP) api/cs/html/*.png $(docdir)/api/cs/html
 	$(CHMOD) 644 $(docdir)/api/cs/html/*.png
+	$(CP) api/cs/html/*.svg $(docdir)/api/cs/html
+	$(CHMOD) 644 $(docdir)/api/cs/html/*.svg
 	$(CP) api/cs/html/*.js $(docdir)/api/cs/html
 	$(CHMOD) 644 $(docdir)/api/cs/html/*.js
 	$(CP) api/perl/perl.html $(docdir)/api/perl
@@ -113,18 +127,34 @@ install:
 	$(CHMOD) 644 $(docdir)/api/ruby/doc/js/*.js
 	$(CP) api/java/*.html $(docdir)/api/java
 	$(CHMOD) 644 $(docdir)/api/java/*.html
-	$(CP) api/java/package-list $(docdir)/api/java
-	$(CHMOD) 644 $(docdir)/api/java/package-list
+	$(CP) api/java/*.js $(docdir)/api/java
+	$(CHMOD) 644 $(docdir)/api/java/*.js
+	$(CP) api/java/*.zip $(docdir)/api/java
+	$(CHMOD) 644 $(docdir)/api/java/*.zip
+	$(CP) api/java/*.js $(docdir)/api/java
+	$(CHMOD) 644 $(docdir)/api/java/*.js
 	$(CP) api/java/*.css $(docdir)/api/java
 	$(CHMOD) 644 $(docdir)/api/java/*.css
-	$(MKINSTALLDIRS) $(docdir)/api/java/com
-	$(MKINSTALLDIRS) $(docdir)/api/java/com/firstworks
-	$(MKINSTALLDIRS) $(docdir)/api/java/com/firstworks/sqlrelay
+	$(CP) api/java/element-list $(docdir)/api/java
+	$(CHMOD) 644 $(docdir)/api/java/element-list
 	$(CP) api/java/com/firstworks/sqlrelay/*.html $(docdir)/api/java/com/firstworks/sqlrelay
 	$(CHMOD) 644 $(docdir)/api/java/com/firstworks/sqlrelay/*.html
-	$(MKINSTALLDIRS) $(docdir)/api/java/resources
 	$(CP) api/java/resources/*.gif $(docdir)/api/java/resources
 	$(CHMOD) 644 $(docdir)/api/java/resources/*.gif
+	$(CP) api/java/resources/*.png $(docdir)/api/java/resources
+	$(CHMOD) 644 $(docdir)/api/java/resources/*.png
+	$(CP) api/java/jquery/*.js $(docdir)/api/java/jquery
+	$(CHMOD) 644 $(docdir)/api/java/jquery/*.js
+	$(CP) api/java/jquery/*.css $(docdir)/api/java/jquery
+	$(CHMOD) 644 $(docdir)/api/java/jquery/*.css
+	$(CP) api/java/jquery/external/jquery/*.js $(docdir)/api/java/jquery/external/jquery
+	$(CHMOD) 644 $(docdir)/api/java/jquery/external/jquery/*.js
+	$(CP) api/java/jquery/images/*.png $(docdir)/api/java/jquery/images
+	$(CHMOD) 644 $(docdir)/api/java/jquery/images/*.png
+	$(CP) api/java/jquery/jszip/dist/*.js $(docdir)/api/java/jquery/jszip
+	$(CHMOD) 644 $(docdir)/api/java/jquery/jszip/*.js
+	$(CP) api/java/jquery/jszip-utils/dist/*.js $(docdir)/api/java/jquery/jszip-utils
+	$(CHMOD) 644 $(docdir)/api/java/jquery/jszip-utils/*.js
 	$(CP) api/tcl/*.html $(docdir)/api/tcl
 	$(CHMOD) 644 $(docdir)/api/tcl/*.html
 	$(CP) api/tcl/*.txt $(docdir)/api/tcl
@@ -143,6 +173,8 @@ install:
 	$(CHMOD) 644 $(docdir)/api/nodejs/html/*.css
 	$(CP) api/nodejs/html/*.png $(docdir)/api/nodejs/html
 	$(CHMOD) 644 $(docdir)/api/nodejs/html/*.png
+	$(CP) api/nodejs/html/*.svg $(docdir)/api/nodejs/html
+	$(CHMOD) 644 $(docdir)/api/nodejs/html/*.svg
 	$(CP) api/nodejs/html/*.js $(docdir)/api/nodejs/html
 	$(CHMOD) 644 $(docdir)/api/nodejs/html/*.js
 	$(CP) features/*.html $(docdir)/features
