I removed RUDIMENTSLIBSPATH as it's not defined and unused I added a subst for ENABLE_ODBC

--- a/configure.in
+++ b/configure.in
@@ -495,6 +495,7 @@ AC_SUBST(SQLR)
 AC_SUBST(SQLRELAY)
 AC_SUBST(SQL_RELAY)
 AC_SUBST(ENABLE_CPP)
+AC_SUBST(ENABLE_ODBC)
 AC_SUBST(ENABLE_ODBC_DRIVER)
 AC_SUBST(ENABLE_CMDLINE)
 AC_SUBST(ENABLE_SERVER)
